correct menu z-index

--- a/css/seed.css
+++ b/css/seed.css
@@ -46,6 +46,7 @@ navigation
 .united, .group {
   margin: 0 !important;
   padding: 0 !important;
+  z-index: 90;
 }
 .group {
   height: 100%;
